# rescreenshot-mcp

./: .actrc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  ENHANCED_VALIDATION_SUMMARY.md  M3_COMPLETION_CHECKLIST.md  M3_DELIVERY_SUMMARY.md  M3_INDEX.md  QUICK_START_M3_TESTING.md  README.md  SESSION_WORK_SUMMARY.md  TEST_EXECUTION_GUIDE.md  TODO.md  VALIDATION_QUICK_REFERENCE.md  clippy.toml  install.ps1  install.sh  justfile  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/screenshot-cli/: Cargo.toml
crates/screenshot-cli/src/: main.rs  measure_capture.rs
crates/screenshot-core/: Cargo.toml
crates/screenshot-core/benches/: encode_perf.rs
crates/screenshot-core/src/: error.rs  lib.rs  model.rs
crates/screenshot-core/src/capture/: composite.rs  constants.rs  image_buffer.rs  matching.rs  mock.rs  mod.rs  traits.rs  wayland_backend.rs  windows_backend.rs  x11_backend.rs
crates/screenshot-core/src/perf/: mod.rs
crates/screenshot-core/src/util/: detect.rs  encode.rs  key_store.rs  mod.rs  temp_files.rs
crates/screenshot-core/tests/: error_integration_tests.rs  windows_integration_tests.rs  x11_integration_tests.rs
crates/screenshot-core/tests/common/: mcp_harness.rs  mod.rs  wayland_harness.rs  windows_helpers.rs
crates/screenshot-mcp-server/: Cargo.toml
crates/screenshot-mcp-server/src/: lib.rs  main.rs  mcp.rs  mcp_content.rs
crates/screenshot-mcp-server/tests/: mcp_integration_tests.rs
crates/screenshot-mcp-server/tests/common/: mcp_harness.rs  mod.rs  wayland_harness.rs  windows_helpers.rs
crates/screenshot-test-utils/: Cargo.toml
crates/screenshot-test-utils/src/: lib.rs  timing.rs  wayland.rs  windows.rs
docs/: API.md  CHANGELOG.md  COMPLETION_STATUS.md  IMAGE_VALIDATION_TESTING.md  M0-COMPLETION-REPORT.md  STATUS.md  TESTING.md  WINDOWS_ARCHITECTURE.md  acceptance-checklist.md  architecture.md  development.md  initial-prompt.md  m3_checklist.md  prime_wayland_consent.md  setup.md  troubleshooting.md  usage.md  windows_backend.md  x11_backend.md
logs/: .866076a49bc64c15cee44d9ceb2cac2ec294a254-audit.json
scripts/: run_memory_probe.sh  run_performance_suite.sh  run_wayland_integration_tests.sh
specs/: 01-specification-v1.0.md
src/: error.rs  lib.rs  main.rs  mcp.rs  model.rs
src/capture/: image_buffer.rs  matching.rs  mock.rs  mod.rs  wayland_backend.rs  windows_backend.rs  x11_backend.rs
src/perf/: mod.rs
src/util/: detect.rs  encode.rs  key_store.rs  mcp_content.rs  mod.rs  temp_files.rs
test_output/: .gitignore
tests/: error_integration_tests.rs  mcp_integration_tests.rs  windows_integration_tests.rs  x11_integration_tests.rs
tests/common/: mcp_harness.rs  mod.rs  wayland_harness.rs  windows_helpers.rs
tools/: measure_capture.rs
