[package]
name = "screenshot-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Rebecca <rebecca@example.com>"]
description = "Cross-platform screenshot MCP server for coding agents"
license = "MIT"
repository = "https://github.com/username/screenshot-mcp"
keywords = ["mcp", "screenshot", "wayland", "screen-capture"]
categories = ["api-bindings"]

[dependencies]
# MCP SDK
rmcp = { version = "0.11.0", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "process", "io-util"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.1", features = ["preserve_order"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Date/time for timestamps
chrono = "0.4"

# Base64 encoding (for MCP image content)
base64 = "0.22"

# Encryption for secure file storage fallback
chacha20poly1305 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
hostname = { version = "0.4", optional = true }
hkdf = { version = "0.12", optional = true }
rand = { version = "0.9", optional = true }

# Image processing (for future milestones)
image = { version = "0.25", features = ["png", "jpeg", "webp"], optional = true }
tempfile = { version = "3.10", optional = true }

# Window matching (for X11 backend)
regex = { version = "1.12", optional = true }
fuzzy-matcher = { version = "0.3", optional = true }

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.12", optional = true }
x11rb = { version = "0.13", optional = true }
xcap = { version = "0.7", optional = true }
keyring = { version = "3.6", optional = true }
pipewire = { version = "0.8", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_System_ProcessStatus"
], optional = true }
windows-capture = { version = "1.3", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-screen-capture-kit = { version = "0.3", optional = true }
core-graphics = { version = "0.25", optional = true }

[dev-dependencies]
criterion = "0.8"

[features]
default = ["image-processing"]
# Platform backends (will be enabled in future milestones)
linux-wayland = ["ashpd", "keyring", "chacha20poly1305", "sha2", "hostname", "hkdf", "rand", "pipewire"]
linux-x11 = ["x11rb", "xcap", "regex", "fuzzy-matcher"]
windows-backend = ["windows-sys", "windows-capture", "regex", "fuzzy-matcher", "image-processing"]
macos-backend = ["objc2-screen-capture-kit", "core-graphics"]
# Image processing (M1)
image-processing = ["image", "tempfile"]
# Testing features (M2 Phase 9)
integration-tests = ["linux-wayland"]
perf-tests = ["linux-wayland"]

[[bin]]
name = "screenshot-mcp"
path = "src/main.rs"

[[bin]]
name = "measure-capture"
path = "tools/measure_capture.rs"
required-features = ["perf-tests", "linux-wayland"]
