[package]
name = "screenshot-mcp"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Rebecca <rebecca@example.com>"]
description = "Cross-platform screenshot MCP server for coding agents"
license = "MIT"
repository = "https://github.com/username/screenshot-mcp"
keywords = ["mcp", "screenshot", "wayland", "screen-capture"]
categories = ["api-bindings"]

[dependencies]
# MCP SDK
rmcp = { version = "0.11.0", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "process", "io-util"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.1", features = ["preserve_order"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Date/time for timestamps
chrono = "0.4"

# Base64 encoding (for MCP image content)
base64 = "0.22"

# Image processing (for future milestones)
image = { version = "0.25", features = ["png", "jpeg", "webp"], optional = true }
tempfile = { version = "3.10", optional = true }

# Window matching (for X11 backend)
regex = "1.12"
fuzzy-matcher = "0.3"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.12"
x11rb = "0.13"
xcap = "0.7"
keyring = "3.6"
pipewire = "0.8"

# Encryption for secure file storage fallback (Wayland restore tokens)
chacha20poly1305 = "0.10"
sha2 = "0.10"
hostname = "0.4"
hkdf = "0.12"
rand = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_Registry"
], optional = false }
windows-capture = "1.3"

[dev-dependencies]
criterion = "0.8"

[features]
default = ["image-processing"]
# Image processing (M1)
image-processing = ["image", "tempfile"]
# Testing features (M2 Phase 9)
integration-tests = []
perf-tests = []

[[bin]]
name = "screenshot-mcp"
path = "src/main.rs"

[[bin]]
name = "measure-capture"
path = "tools/measure_capture.rs"
required-features = ["perf-tests"]
