[workspace]
members = [
    "crates/screenshot-core",
    "crates/screenshot-mcp-server",
    "crates/screenshot-cli",
    "crates/screenshot-test-utils",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
authors = ["Rebecca <rebecca@example.com>"]
license = "MIT"
repository = "https://github.com/username/screenshot-mcp"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "process", "io-util"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.1", features = ["preserve_order"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Date/time for timestamps
chrono = "0.4"

# Base64 encoding (for MCP image content)
base64 = "0.22"

# Image processing (defined in screenshot-core crate with optional flags)

# Window matching
regex = "1.12"
fuzzy-matcher = "0.3"

# Platform-specific dependencies (defined in crates, not workspace)
# Encryption dependencies also defined in screenshot-core crate

[workspace.dependencies.rmcp]
version = "0.11.0"
features = ["server", "transport-io"]

[workspace.dependencies.criterion]
version = "0.8"
