[package]
name = "screenshot-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for screenshot capture debugging and testing"

[dependencies]
# Core library
screenshot-core = { path = "../screenshot-core" }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "screenshot-cli"
path = "src/main.rs"

[[bin]]
name = "measure-capture"
path = "src/measure_capture.rs"
required-features = ["perf-tests"]

[features]
default = []
perf-tests = ["screenshot-core/perf-tests"]
